--- a/memapixapp/templates/memapixapp/login.html
+++ b/memapixapp/templates/memapixapp/login.html
@@ -32,6 +32,8 @@
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
+<p><a href="{% url 'register' %}">Register for Account</a></p>
+
 {# Assumes you setup the password_reset view in your URLconf #}
 {#<p><a href="{% url 'password_reset' %}">Lost password?</a></p>#}
 
